Bug 178019 - Kstars INDI Server crash
Summary: Kstars INDI Server crash
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-18 00:11 UTC by Jeppe Nielsen
Modified: 2009-05-28 01:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeppe Nielsen 2008-12-18 00:11:04 UTC
Version:           1.4.1 (using KDE 4.1.3)
OS:                Linux
Installed from:    Ubuntu Packages

Back trace
Program: KStars (kstars), signal SIGSEGV
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb54fa8d0 (LWP 8822)]
[New Thread 0xb2effb90 (LWP 8889)]
[New Thread 0xb38e8b90 (LWP 8885)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb73788cf in QMetaObject::invokeMethod () from /usr/lib/libQtCore.so.4
#7  0xb71abeef in QAbstractSocket::disconnectFromHost ()
   from /usr/lib/libQtNetwork.so.4
#8  0xb71afa8b in ?? () from /usr/lib/libQtNetwork.so.4
#9  0xb719eceb in ?? () from /usr/lib/libQtNetwork.so.4
#10 0xb71a0056 in ?? () from /usr/lib/libQtNetwork.so.4
#11 0xb60038ec in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#12 0xb600b72e in QApplication::notify () from /usr/lib/libQtGui.so.4
#13 0xb7625b2d in KApplication::notify () from /usr/lib/libkdeui.so.5
#14 0xb736fe61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#15 0xb739a70a in ?? () from /usr/lib/libQtCore.so.4
#16 0xb58c06f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#17 0xb58c3da3 in ?? () from /usr/lib/libglib-2.0.so.0
#18 0xb58c3f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#19 0xb739a478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#20 0xb609dea5 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb736e52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#22 0xb736e6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#23 0xb6470987 in QDialog::exec () from /usr/lib/libQtGui.so.4
#24 0x0820c8e9 in ?? ()
#25 0x082098cd in ?? ()
#26 0xb7384a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#27 0xb7384e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#28 0xb5ffd5f1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#29 0xb5ffdf5f in QAction::activate () from /usr/lib/libQtGui.so.4
#30 0xb63db564 in ?? () from /usr/lib/libQtGui.so.4
#31 0xb63dbff2 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#32 0xb76fab95 in KMenu::mouseReleaseEvent () from /usr/lib/libkdeui.so.5
#33 0xb605b962 in QWidget::event () from /usr/lib/libQtGui.so.4
#34 0xb63de2e9 in QMenu::event () from /usr/lib/libQtGui.so.4
#35 0xb60038ec in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#36 0xb600c0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#37 0xb7625b2d in KApplication::notify () from /usr/lib/libkdeui.so.5
#38 0xb736fe61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#39 0xb600b36e in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#40 0xb60758de in ?? () from /usr/lib/libQtGui.so.4
#41 0xb60749e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#42 0xb609e7aa in ?? () from /usr/lib/libQtGui.so.4
#43 0xb58c06f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#44 0xb58c3da3 in ?? () from /usr/lib/libglib-2.0.so.0
#45 0xb58c3f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#46 0xb739a478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#47 0xb609dea5 in ?? () from /usr/lib/libQtGui.so.4
#48 0xb736e52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#49 0xb736e6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#50 0xb7370da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#51 0xb6003767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#52 0x08247ef1 in ?? ()
#53 0xb5c5d685 in __libc_start_main () from /lib/tls/i686/cmov/libc.so.6
#54 0x0806ddf1 in _start ()
#0  0xb7fe8430 in __kernel_vsyscall ()

Happened while I was running the telescope wizard. I was trying to install a etx90. When I was asked to specify a port for the server, i left it blank and let it use INDI's standard port (7264), kstars crashed afterwards.
Comment 1 Médéric Boquien 2008-12-21 00:27:06 UTC
Hello,

INDI is now developed independently of kstars so i think it should be reported to the INDI project directly: http://indi.sourceforge.net/index.php/Main_Page . However to be sure where the problem comes from, follow the instructions provided there: http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and resubmit a new backtrace. A useful backtrace must not contain any "no debugging symbols found". Thanks!
Comment 2 Médéric Boquien 2009-02-21 14:25:39 UTC
No news and belonging to indi's bug tracker anyway: closing.
Comment 3 Jasem Mutlaq 2009-02-21 14:53:21 UTC
Actually, this is indeed a KStars bug, not INDI. Can you please re-open it and assign it to me?
Comment 4 Jasem Mutlaq 2009-05-28 01:33:57 UTC
SVN commit 973850 by mutlaqja:

Finally fixing the ellusive telescope wizard crash bug. It was finally traced to the propagation of the signals and slots among different objects, some of which get deleted causing a seg fault. By using QueuedConnection, the problem is now gone.

BUG: 178019
CCMAIL: kstars-devel@kde.org



 M  +21 -11    telescopewizardprocess.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=973850