Finally fixing the ellusive telescope wizard crash bug. It was finally traced to the propagation of the signals and slots among different objects, some of which get deleted causing a seg fault. By using QueuedConnection, the problem is now gone.

BUG: 178019
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=973850